bomc-kubernetes-event/kubernetes-deployment/keycloak/bomc-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: bomc-app
  labels:
    name: keycloak
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      name: keycloak
      labels:
        app: keycloak
        name: keycloak
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      restartPolicy: Always
      containers:
      - name: keycloak
        image: bomc/keycloak:v8.0.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
            protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 400m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /auth
            port: 8080
          initialDelaySeconds: 120
          timeoutSeconds: 90
        readinessProbe:
          httpGet:
            path: /auth
            port: 8080
          initialDelaySeconds: 120
          timeoutSeconds: 90
